add_subdirectory(sequence_based)

set(MULTI_VERSIONS_SOURCES
        multi_versions_impl.cc)

add_library(${MULTI_VERSIONS_STATIC_LIB} STATIC ${MULTI_VERSIONS_SOURCES})
target_link_libraries(${MULTI_VERSIONS_STATIC_LIB} PRIVATE ${MULTI_VERSIONS_STATIC_LIB_LINKING_IMPLS})

if(BUILD_SHARED)
  add_library(${MULTI_VERSIONS_SHARED_LIB} SHARED ${MULTI_VERSIONS_SOURCES})
  target_link_libraries(${MULTI_VERSIONS_SHARED_LIB} PRIVATE ${MULTI_VERSIONS_SHARED_LIB_LINKING_IMPLS})
endif()